--- a/styles/style.css
+++ b/styles/style.css
@@ -8,10 +8,9 @@
 }
 
 .footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
   height: 30px;
+  margin-top: 1%;
   padding: 5px;
   background-color: lightgrey;
   text-align: center;
@@ -25,3 +24,16 @@
 .container-first{
   margin-top: 2%;
 }
+
+.bordered{
+  border: 1px solid black;
+  padding: 0;
+}
+
+p{
+  text-indent: 20px;
+  }
+
+.text{
+  padding: 3%;
+  }
