--- a/styles/style.css
+++ b/styles/style.css
@@ -1,39 +1,45 @@
-
-.page-header {
-  text-align: center;
+a {
+  color: rgb(41, 128, 185) !important;
 }
 
-.link-colored {
-  color: rgb(41, 128, 185) !important;
+a[href*='collapse'] {
+  border-bottom: 1px dashed blue;
+}
+
+a:hover {
+  text-decoration: none;
+  border-bottom: none;
 }
 
 .footer {
   width: 100%;
-  height: 30px;
+  height: 4.5%;
   margin-top: 1%;
   padding: 5px;
   background-color: lightgrey;
   text-align: center;
-
 }
 
-.text-wrapper{
-  text-align: center;
+h1 {
+  margin-bottom: 3%;
 }
 
-.container-first{
-  margin-top: 2%;
+p {
+  text-indent: 2em;
 }
 
-.bordered{
-  border: 1px solid black;
-  padding: 0;
+ h3:hover {
+  color: #0095b3;
+  text-decoration: none;
+ }
+
+ .text-margined {
+  margin: 2%;
+ }
+
+ li:hover {
+  background-color: #eee;
 }
 
-p{
-  text-indent: 20px;
-  }
 
-.text{
-  padding: 3%;
-  }
+
